# dads

./: .gitignore  404.html  README.md  WORKTREES.md  elevation.py  eto_error.py  hrrr.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt
analyze/: metdata_error.py
artifacts/: canonical_holdout_fids.json  madis_pnw.csv  madis_pnw_500.csv  synoptic_wind_height_crosswalk.csv
configs/: ablation_no_humidity.toml  e0_ea_gnn.toml  e0_tmin_gnn.toml  e2_tmax_gnn.toml  e4_tmax_covariate_neighbors.toml  e7_tmax_multiyear.toml  run5_all_features.toml  run7_1km.toml  wind_gnn_2hop.toml  wind_gnn_full.toml  wind_gnn_no_sx.toml  wind_mlp_baseline.toml
cube/: __init__.py  cell_station_index.py  comparators.py  config.py  graph.py  grid.py  index.html  stations.py
docs/: index.md  madis_qaqc.md  requirements.txt
extract/: agrimet.py  extract_gridded.py  gridmet_template.ini  nldas_template.ini
grid/: __init__.py  build_station_daily.py  cog_utils.py  daily.py  daymet_extract.py  download_hrrr_archive.py  download_hrrr_stability.py  download_rtma_archive.py  gridded_download.py  nldas_extract.py  prism_extract.py  rtma_extact.py  rtma_patch_sampler.py  rtma_station_daily.py  station_extract.py  thredds.py  to_parquet.py
hrrr/: index.html
inference/: benchmark_hetero_grid.py  predict_hrrr_hetero_grid.py  predict_tmax_grid.py
madis_qaqc/: index.html
model/: edges.py  graph.py  nn.py  stgnn.py
models/: graph.py  scalers.py
notes/: PLAN.md  RTMA_MVP_PROGRESS.md  WORKTREE_SETUP.md
policy/: GRID_FEATURE_POLICY.md
prep/: add_daily_geosat_to_table.py  graph.py  (+47 more)
(+401 files in other folders)
