[project]
name = "dads-mvp"
version = "0.0.0"
description = "DADS MVP experiments (RTMA bias correction, patch-based training)."
requires-python = "==3.13.*"

dependencies = [
  "numpy>=2.4.0",
  "pandas>=3.0.0",
  "pyarrow>=20.0.0",
  "rasterio>=1.5.0",
  "torch>=2.10.0",
  "lightning>=2.5.0",
  "tensorboard>=2.20.0",
  "tomli-w>=1.2.0",
  "torch-geometric>=2.7.0",
  "pyproj>=3.7.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

