[project]
name = "dads-mvp"
version = "0.0.0"
description = "DADS MVP experiments (RTMA bias correction, patch-based training)."
requires-python = "==3.13.*"

dependencies = [
  "numpy>=2.4.0",
  "pandas>=3.0.0",
  "pyarrow>=20.0.0",
  "rasterio>=1.5.0",
  "torch>=2.10.0",
  "lightning>=2.5.0",
  "tensorboard>=2.20.0",
  "tomli-w>=1.2.0",
  "torch-geometric>=2.7.0",
  "pyproj>=3.7.2",
  "scikit-learn>=1.8.0",
  "xarray>=2026.1.0",
  "netcdf4>=1.7.4",
  "earthengine-api>=1.7.14",
  "eccodes>=2.46.0",
  "herbie-data>=2026.1.1",
  "cfgrib>=0.9.15.1",
  "boto3>=1.38.0",
  "rioxarray>=0.18.0",
  "obsmet",
]

[tool.uv.sources]
obsmet = { path = "../obsmet", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
docs = [
    "mkdocs-material>=9.6.0",
]

